@@ -1,3 +1,9 @@
+2005-02-22 15:06  kraxel
+
+	* bttv-cards.c, bttv.h:
+
+	- Kodicom-4400R support (by William M. Brack).
+
 2005-02-22 13:28  kraxel
 
 	* cx88-input.c, ir-common.c, ir-common.h, ir-kbd-gpio.c:
